[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/main/main.gd" type="Script" id=1]
[ext_resource path="res://scenes/main_menu/phone.png" type="Texture" id=2]
[ext_resource path="res://dialogue/boldpx.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://dialogue/pixel5x5.ttf" type="DynamicFontData" id=4]

[sub_resource type="ViewportTexture" id=1]
viewport_path = NodePath("LevelContainer")

[sub_resource type="DynamicFont" id=2]
size = 9
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=3]
default_font = SubResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 7
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=5]
default_font = SubResource( 4 )

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="LevelContainer" type="Viewport" parent="."]
size = Vector2( 256, 144 )
transparent_bg = true
hdr = false
usage = 0
render_target_v_flip = true

[node name="Camera" type="Camera2D" parent="."]
current = true

[node name="LevelView" type="Sprite" parent="."]
texture = SubResource( 1 )

[node name="HUD" type="CanvasLayer" parent="."]

[node name="DialogueBox" type="Control" parent="HUD"]
visible = false
margin_right = 256.0
margin_bottom = 32.0

[node name="Background" type="ColorRect" parent="HUD/DialogueBox"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="SpeakerPicture" type="TextureRect" parent="HUD/DialogueBox"]
margin_left = 6.0
margin_top = 1.0
texture = ExtResource( 2 )
stretch_mode = 4

[node name="SpeakerLabel" type="Label" parent="HUD/DialogueBox"]
anchor_right = 1.0
margin_left = 43.0
theme = SubResource( 3 )

[node name="Dialogue" type="RichTextLabel" parent="HUD/DialogueBox"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 43.0
margin_top = 11.0
theme = SubResource( 5 )
